# shumy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
examples/: main.cpp
include/shumy/: FBM.h  Noise.h  Perlin.h  Value.h  White.h
src/: FBM.cpp  Perlin.cpp  Value.cpp  White.cpp  WhiteNoise.cpp
